# GenerateShortUrl

./: README.md  manage.py  pyproject.toml
GenerartShortUrl/: asgi.py  settings.py  urls.py  wsgi.py
