[tool.poetry]
name = "generate-short-url"
version = "0.1.0"
description = "Generatr short urls."
authors = ["Lionel Johnson"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"


[tool.poetry.group.dev.dependencies]
django = "^5.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
